--- a/driver_forecasts/Solar radiation.Rmd
+++ b/driver_forecasts/Solar radiation.Rmd
@@ -24,17 +24,17 @@ all_met <- met %>%
   left_join(hist_met, by = c("Date" = "datetime"))
 
 all_met %>%
-  ggplot(aes(y = par_den_c_avg, x = ShortwaveRadiation_Wm2)) +
-  geom_point(aes(color = par_den_c_avg > 1))+
+  ggplot(aes(y = PAR_Den_C_Avg, x = ShortwaveRadiation_Wm2)) +
+  geom_point(aes(color = PAR_Den_C_Avg > 1))+
   geom_smooth(method = "lm", formula=y~x+0)
 
 all_met_fit <- all_met %>%
-  filter(par_den_c_avg > 1)
-mod <- lm(par_den_c_avg ~ ShortwaveRadiation_Wm2 + 0, data = all_met_fit)
+  filter(PAR_Den_C_Avg > 1)
+mod <- lm(PAR_Den_C_Avg ~ ShortwaveRadiation_Wm2 + 0, data = all_met_fit)
 summary(mod) #R2 = 0.97
 
 predictions <- data.frame(datetime = all_met_fit$Date, 
-                          site_id = unique(all_met_fit$site_id),
+                          #site_id = unique(all_met_fit$site_id),
                           par_den_c_avg = mod$fitted.values)
 
 write_csv(predictions, "../met_downloads/past_daily_par.csv")
